force-app/main/default/objects/Case_Ticket__c/Case_Ticket__c.object-meta.xml
<CustomObject>
    <label>Case Ticket</label>
    <nameField>
        <displayFormat>CTN-{00000}</displayFormat>
        <label>Case No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>