force-app/main/default/objects/Case_Ticket__c/fields/First_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>First_Flight_No__c</fullName>
    <label>1st Flight No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>