force-app/main/default/objects/Case_Ticket__c/fields/First_Flight_RBD__c.field-meta.xml
<CustomField>
    <fullName>First_Flight_RBD__c</fullName>
    <label>1st Flight RBD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RBD</valueSetName>
    </valueSet>
</CustomField>