force-app/main/default/objects/Case_Ticket__c/fields/Remained_TWD__c.field-meta.xml
<CustomField>
    <fullName>Remained_TWD__c</fullName>
    <label>Remained TWD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>