force-app/main/default/objects/Case_Ticket__c/fields/RT_QW__c.field-meta.xml
<CustomField>
    <fullName>RT_QW__c</fullName>
    <label>RT/QW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RT/QW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>