force-app/main/default/objects/Case_Ticket__c/fields/Second_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Flight_Date__c</fullName>
    <label>2nd Flight Date</label>
    <type>Date</type>
</CustomField>