force-app/main/default/objects/Case_Ticket__c/fields/Second_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Second_Flight_No__c</fullName>
    <label>2nd Flight No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>