force-app/main/default/objects/Case_Ticket__c/fields/Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Ticket_No__c</fullName>
    <label>Ticket No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>