force-app/main/default/objects/Case_Ticket__c/fields/TicketCertificateID__c.field-meta.xml
<CustomField>
    <fullName>TicketCertificateID__c</fullName>
    <label>Certificate No.</label>
    <referenceTo>Ticket_Certificate__c</referenceTo>
    <relationshipLabel>Case Tickets</relationshipLabel>
    <relationshipName>Case_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>