force-app/main/default/objects/Case_Ticket__c/fields/Total_TW__c.field-meta.xml
<CustomField>
    <fullName>Total_TW__c</fullName>
    <label>Total(TW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>