force-app/main/default/objects/Case_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TicketCertificateID__c</columns>
    <columns>Contact_No__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Issue_Date__c</columns>
    <columns>Remark__c</columns>
    <columns>Routing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>